--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,26 @@ header h1 {
     color: #fff;
 }
 
+.loss {
+    margin: 20px auto 0 20px;
+    border: 5px solid #FFC56C;
+    padding: 50px;
+    text-align: center;
+}
+
+.loss strong {
+    font-size: 36px;
+    text-shadow: 3px 3px 0px #D97200;
+    color: #fff;
+    line-height: 36px;
+}
+
+.loss a {
+    display: block;
+    margin: 10px 0;
+    font-size: 20px;
+}
+
 .links {
     margin: 50px 0;
 }
@@ -70,4 +90,8 @@ header h1 {
 
 a {
     color: #ff3600;
+}
+
+a:hover {
+    color: #000;
 }
