--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,9 @@ header h1 {
     margin: 0 0 50px;
 }
 
+.clock { left: -10px; }
+
 .op {
-    margin: 20px auto 0 20px;
     border: 5px solid #FFC56C;
     padding: 50px;
     text-align: left;
@@ -56,7 +57,6 @@ header h1 {
 }
 
 .loss {
-    margin: 20px auto 0 20px;
     border: 5px solid #FFC56C;
     padding: 50px;
     text-align: center;
